update css page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div class="wreapper">
+    <div class="wrapper">
         <div class="left"></div>
         <div class="right"></div>
 
@@ -29,7 +29,7 @@
         </nav>
 
         <div class="content">
-          <div class="img-wrappeer">
+          <div class="img-wrapper">
               <div class="karina"></div>
           </div>
           <div class="info">
